--- a/style/main.css
+++ b/style/main.css
@@ -420,10 +420,12 @@ hr {
     z-index: 10;
     font-size: 24px; }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
+    background: url(actr.jpg);
+    font-size: 44;
+    color: white;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
-    background: #ede0c8;
+    background: url(fish.gif);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     font-size: 19px;
@@ -453,9 +455,9 @@ hr {
     background: url(snp.gif);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381); }
   .tile.tile-1024 .tile-inner {
-    color: #f9f6f2;
-    font-size: 40px;
-    background: #ffe07d;
+    color: white;
+    font-size: 19px;
+    background: url(monk.gif);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
   .tile.tile-2048 .tile-inner {
     color: white;
@@ -471,14 +473,15 @@ hr {
     color: yellow;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
   .tile.tile-16384 .tile-inner {
-    background: #ffedb4;
+    background: rgb(128, 64, 0);
+    color: white;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-32768 .tile-inner {
     background: #fff1c4;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-65536 .tile-inner {
     color: #f9f6f2;
-    background: url(65536.jpg);
+    background: aqua;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-131072 .tile-inner {
     color: #f9f6f2;
